Bug 156204 - Crash during obtaining covers from internet
Summary: Crash during obtaining covers from internet
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-20 01:58 UTC by jofko
Modified: 2008-05-08 04:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jofko 2008-01-20 01:58:48 UTC
Version:           v 3.0.1 (using KDE 4.0.0)
Installed from:    SuSE RPMs
OS:                Linux

Backtrace:

[?1034h(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb58616d0 (LWP 7277)]
[New Thread 0xaade2b90 (LWP 7299)]
[New Thread 0xab5e3b90 (LWP 7298)]
[New Thread 0xabfb1b90 (LWP 7297)]
[New Thread 0xacb9bb90 (LWP 7296)]
[New Thread 0xad3e1b90 (LWP 7295)]
[New Thread 0xb077eb90 (LWP 7290)]
[New Thread 0xb1ec1b90 (LWP 7283)]
[New Thread 0xb3796b90 (LWP 7278)]
[KCrash handler]
#5  0x080a721c in ?? ()
#6  0x080a7490 in ?? ()
#7  0x080a8f02 in ?? ()
#8  0xb7ef6c70 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0xb7ef75b2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb7a0ce57 in KDialog::okClicked () from /usr/lib/libkdeui.so.5
#11 0xb7a0fd79 in KDialog::slotButtonClicked () from /usr/lib/libkdeui.so.5
#12 0xb7a101cb in KDialog::qt_metacall () from /usr/lib/libkdeui.so.5
#13 0x080a8e6f in ?? ()
#14 0xb7ef6c70 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb7ef75b2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb7efa7c3 in QSignalMapper::mapped () from /usr/lib/libQtCore.so.4
#17 0xb7efac9a in QSignalMapper::map () from /usr/lib/libQtCore.so.4
#18 0xb7efae6e in QSignalMapper::map () from /usr/lib/libQtCore.so.4
#19 0xb7efb1a7 in QSignalMapper::qt_metacall () from /usr/lib/libQtCore.so.4
#20 0xb7ef6c70 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#21 0xb7ef6f80 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#22 0xb74fdf41 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#23 0xb72ecdb9 in QAbstractButtonPrivate::emitClicked ()
   from /usr/lib/libQtGui.so.4
#24 0xb72edbe0 in QAbstractButtonPrivate::click () from /usr/lib/libQtGui.so.4
#25 0xb72ede0b in QAbstractButton::mouseReleaseEvent ()
   from /usr/lib/libQtGui.so.4
#26 0xb7070f6c in QWidget::event () from /usr/lib/libQtGui.so.4
#27 0xb72ed0cf in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#28 0xb7376f12 in QPushButton::event () from /usr/lib/libQtGui.so.4
#29 0xb702c09d in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#30 0xb703280d in QApplication::notify () from /usr/lib/libQtGui.so.4
#31 0xb7a8bc2d in KApplication::notify () from /usr/lib/libkdeui.so.5
#32 0xb7ee590b in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#33 0xb7082dd3 in QETWidget::translateMouseEvent () from /usr/lib/libQtGui.so.4
#34 0xb7082436 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#35 0xb70a5aba in x11EventSourceDispatch () from /usr/lib/libQtGui.so.4
#36 0xb5dfa446 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#37 0xb5dfd7e2 in ?? () from /usr/lib/libglib-2.0.so.0
#38 0x0816ec58 in ?? ()
#39 0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Michael Pyne 2008-05-08 04:48:04 UTC
SVN commit 805279 by mpyne:

Fix two bugs in JuK trunk:

1) Crash when trying to download covers.  Apparently I missed the bit in the KIO docs where the jobs will
delete themselves when ready.  I believe this fixes bug 156204.
2) No longer allow eleventy billion KIO download progress windows to show up while filling in the cover
chooser dialog.

CCBUG:156204


 M  +2 -4      webimagefetcher.cpp  
 M  +1 -1      webimagefetcherdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805279
Comment 2 Michael Pyne 2008-05-08 04:53:10 UTC
SVN commit 805282 by mpyne:

Backport fixes from juk trunk to 4.0 branch.

1) Fix crash when trying to download covers.  I believe this also fixes bug 156204.
2) No longer allow eleventy billion KIO progress dialogs to pop up while filling in
the cover dialog.

BUG:156204


 M  +2 -4      webimagefetcher.cpp  
 M  +1 -1      webimagefetcherdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805282