Backport fixes from juk trunk to 4.0 branch.

1) Fix crash when trying to download covers.  I believe this also fixes bug 156204.
2) No longer allow eleventy billion KIO progress dialogs to pop up while filling in
the cover dialog.

BUG:156204

svn path=/branches/KDE/4.0/kdemultimedia/juk/; revision=805282